[tool.poetry]
name = "Assessment-Toolkit"
version = "0.1.0"
description = ""
authors = ["Miguel Rios"]
readme = "README.md"
homepage = "https://github.com/m1j09830/Assessment-Toolkit"
repository = "https://github.com/m1j09830/Assessment-Toolkit"

[tool.poetry.dependencies]
python = "^3.9,<3.14"
rich = "^13.7.0"
typer = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0"
pytest = "^8.0"
black = "^24.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Assessment-Toolkit = "assessment_toolkit.__main__:app"
